--- a/blood/templates/blood/homepage.html
+++ b/blood/templates/blood/homepage.html
@@ -58,7 +58,7 @@
 <body>
   
   <div class="main"><b>Thalassemia</b></div>
-  <div class="mainn"><b>Support</b></div>  
+  <div class="mainn"><b>Support></div>  
 
   <img class="pic" src="{% static 'images/Thala.png' %}" width="200" height="200"> 
   <div class="map"><a href="{% url 'map' %}" class="btn btn-primary">View Map</a></div>
